# oneCurl

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  curl_parser.rs  http_client.rs  lib.rs  main.rs  models.rs  storage.rs  websocket.rs
src/components/Common/: Button.tsx  Input.tsx  Modal.tsx  Select.tsx  Tabs.tsx  ThemeToggle.tsx
src/components/Environment/: EnvironmentEditor.tsx  VariableEditor.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx  index.tsx
src/components/RequestInput/: CurlInput.tsx  EnvironmentSelector.tsx  FormInput.tsx  index.tsx
src/components/ResponseDisplay/: ResponseBody.tsx  ResponseHeaders.tsx  ResponseMeta.tsx  index.tsx
src/components/Sidebar/: EnvironmentList.tsx  FavoritesList.tsx  HistoryDetail.tsx  HistoryList.tsx  ProjectTreePanel.tsx
src/components/Tabs/: TabBar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/services/: tauri.ts
src/stores/: environmentStore.ts  favoritesStore.ts  historyStore.ts  projectStore.ts  requestStore.ts  tabStore.ts  uiStore.ts
src/types/: environment.ts  favorite.ts  history.ts  index.ts  project.ts  request.ts  response.ts
src/utils/: curl.ts  environment.ts  export.ts  import.ts
