[package]
name = "onecurl"
version = "0.1.0"
description = "A curl-based HTTP client"
authors = ["you"]
edition = "2021"

[lib]
name = "onecurl_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1"
clap = { version = "4.4", features = ["derive"] }
url = "2.4"
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
